# cosmic_res_downloader_rs

./: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: downloader.rs  lib.rs  main.rs  models.rs  parser.rs  unzipper.rs  xml_parser.rs
src/components/: DownloadPanel.vue  EnvInfoPanel.vue  FileList.vue  InputPanel.vue
