[package]
name = "cosmic_res_downloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "cosmic_res_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
md-5 = "0.10"
futures-util = "0.3"
regex = "1"
zip = "2"
